parser/src/test/resources/corpus/invalid/10_statement_outside_rule.ff
post fee to ledger account "Stray Post"
